--- a/.github/workflows/main_tusk.yml
+++ b/.github/workflows/main_tusk.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js project to Azure Function App - tusk
 
 on:
@@ -7,8 +10,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './out' # Set this to the path with the static files
-  NODE_VERSION: '20.x'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build:
@@ -22,15 +25,17 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: 'Install Dependencies and Build'
+      - name: 'Resolve Project Dependencies Using Npm'
+        shell: bash
         run: |
-          npm install --force
-          npm install pm2 -g  # Install PM2 globally
-          npm run build
-          npm run export  # Export static files if needed
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+          popd
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./out
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -43,7 +48,7 @@ jobs:
     needs: build
     
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -53,21 +58,19 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9784CC6BBCEC4A20ADFCA4D86958B260 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A364793E229C47849CE215151B4CF927 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_73F3BBB3671B41CD869BAC37E1C6506F }}
 
-      - name: Run Azure Functions Action
+      - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
           app-name: 'tusk'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-      
-      - name: Start Application with PM2
-        run: pm2 start npm --name 'app-name' -- run 'start:prod'
+          
