--- a/.github/workflows/main_tusk.yml
+++ b/.github/workflows/main_tusk.yml
@@ -22,20 +22,25 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: 'Install Dependencies and Build'
+      - name: 'Resolve Project Dependencies Using Npm'
+        shell: bash
         run: |
-          npm install --legacy-peer-deps
-          npm install pm2 -g  # Install PM2 globally
-          npm run build
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          npm install --force
+          npm run build --if-present
+          npm run test --if-present
+          npm i pm2 -g
+          popd
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./out
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
           path: release.zip
+
 
   deploy:
     runs-on: ubuntu-latest
