--- a/.github/workflows/main_tusk.yml
+++ b/.github/workflows/main_tusk.yml
@@ -76,4 +76,4 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
       - name: Start Application with PM2
-        run: pm2 serve /home/site/wwwroot/out --no-daemon --spa
+        run: npx pm2 serve /home/site/wwwroot/out --no-daemon --spa
