--- a/.github/workflows/main_tusk.yml
+++ b/.github/workflows/main_tusk.yml
@@ -1,7 +1,7 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - tusk
+name: Build and deploy Node.js app to Azure Web App - tusk
 
 on:
   push:
@@ -9,31 +9,23 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
 
-      - name: Setup Node ${{ env.NODE_VERSION }} Environment
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '20.x'
 
-      - name: 'Resolve Project Dependencies Using Npm'
-        shell: bash
+      - name: npm install, build, and test
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install --legacy-peer-deps
+          npm install
           npm run build --if-present
           npm run test --if-present
-          npm i pm2 -g
-          popd
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -47,7 +39,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
 
@@ -63,17 +57,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9784CC6BBCEC4A20ADFCA4D86958B260 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A364793E229C47849CE215151B4CF927 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_73F3BBB3671B41CD869BAC37E1C6506F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F27FF393BAF2476CA5185BB87ADB00EE }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7CE443B3339A46B5BF010016389FE1AF }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E4CBBF948CBC44B49FEC0CBFB382351E }}
 
-      - name: 'Run Azure Functions Action'
-        uses: Azure/functions-action@v1
-        id: fa
+      - name: 'Deploy to Azure Web App'
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'tusk'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: .
           
-      - name: Start Application with PM2
-        run: npx pm2 serve /home/site/wwwroot/out --no-daemon --spa
